# c-basics

./: .gitignore  factorial.c  guess_the_number.c  hello.c  recursion.c  rocket_launch_countdown.c  tic_tac_toe.c  weekend_or_workday.c
ALL C/: dynamic.c  hello.c  recursion.c
ALL C/programs/: factorial.c  guess_the_number.c  rocket_launch_countdown.c  weekend_or_workday.c
ALL C/programs/include/: factorial_recursion.h  week_day.h
ALL CPP/programs/: rps_game.cpp
ALL CPP/programs/adms-tcp-listener/: .clangd  .env.example  .gitignore  CMakeLists.txt
ALL CPP/programs/adms-tcp-listener/src/: config.cpp  config.h  main.cpp
ALL CPP/programs/adms-tcp-listener/src/http/: poster.cpp  poster.h  worker.h
ALL CPP/programs/adms-tcp-listener/src/log/: logger.cpp  logger.h
ALL CPP/programs/adms-tcp-listener/src/proto/: parser.cpp  parser.h
ALL CPP/programs/adms-tcp-listener/src/queue/: spsc.h
ALL CPP/programs/contact_book/: main.cpp
ALL CPP/programs/contact_book/include/: ContactManager.cpp  ContactManager.h
ALL CPP/programs/pingpong/: Makefile  main.code-workspace  main.cpp
ALL CPP/programs/rps_game/: main.cpp
ALL CPP/programs/rps_game/include/: RPSGame.cpp  RPSGame.h
ALL CPP/programs/simple_tcp_http/: main  main.cpp
comps/: fact.c  fact.h  wd.h
programs/: factorial.c  rocket_launch_countdown.c  tic_tac_toe.c  weekend_or_workday.c
programs/include/: week_day.h
